--- a/site.html
+++ b/site.html
@@ -11,11 +11,11 @@
         <div class="navbar">
             <img src="Logo.jpg" class="logo">
             <ul>
-                <li><a href="http://127.0.0.1:5500/site.html">Acasa</a></li>
-                <li><a href="http://127.0.0.1:5500/site2.html">Pizza</a></li>
-                <li><a href="#">Paste</a></li>
-                <li><a href="#">Burgeri</a></li>
-                <li><a href="#">Salate</a></li>
+              <li><a href="http://127.0.0.1:5500/site.html">Acasa</a></li>
+              <li><a href="http://127.0.0.1:5500/site2.html#pizza" id="Pizza">Pizza</a></li>
+              <li><a href="http://127.0.0.1:5500/site2.html#paste"id ="Paste">Paste</a></li>
+              <li><a href="http://127.0.0.1:5500/site2.html#burgeri"id ="Burgeri">Burgeri</a></li>
+              <li><a href="http://127.0.0.1:5500/site2.html#salate"id= "Salate">Salate</a></li>
                 <li><a href="#" id="contact-link">Contact</a></li>
                 <div class="overlay" id="overlay"></div>
                 <div class="popup" id="popup">
