--- a/site2.html
+++ b/site2.html
@@ -17,16 +17,18 @@
     <div class="navbar">
       <ul>
         <li><a href="http://127.0.0.1:5500/site.html">Acasa</a></li>
-        <li><a href="http://127.0.0.1:5500/site2.html">Pizza</a></li>
-        <li><a href="#">Paste</a></li>
-        <li><a href="#">Burgeri</a></li>
-        <li><a href="#">Salate</a></li>
+        <li><a href="http://127.0.0.1:5500/site2.html#pizza" id="Pizza">Pizza</a></li>
+        <li><a href="http://127.0.0.1:5500/site2.html#paste"id ="Paste">Paste</a></li>
+        <li><a href="http://127.0.0.1:5500/site2.html#burgeri"id ="Burgeri">Burgeri</a></li>
+        <li><a href="http://127.0.0.1:5500/site2.html#salate"id= "Salate">Salate</a></li>
         <li><a href="#" id="contact-link">Contact</a></li>
       </ul>
 
       <img src="Logo.jpg" class="logo">
 
     </div>
+    <!--Pentru Pizza-->
+    <div id="pizza">Pizza</div>
     <div class="Pizza">
       <div class="pizza-item">
         <img src="cursor.png">
@@ -108,8 +110,126 @@
         <h3>Margherita</h3>
         <p>Ingrediente: sos de roșii, mozzarella</p>
       </div>
+      <div class="pizza-item">
+        <img src="">
+        <h3>Pizza Ton</h3>
+        <p>Ingrediente:</p>
+      </div>
     </div>
-    <div class="spacer"></div>
+
+    <!--Pentru Paste-->
+    <div id="paste">Paste</div>
+    <div class="Paste">
+      <div class="paste-item">
+        <img src=>
+        <h3>Paste Man</h3>
+        <p>Ingrediente:</p>
+      </div>
+      <div class="paste-item">
+        <img src="">
+        <h3>Paste Carbonara</h3>
+        <p>Ingrediente:</p>
+      </div>
+      <div class="paste-item">
+        <img src="">
+        <h3>Paste Quattro Formaggi</h3>
+        <p>Ingrediente:</p>
+      </div>
+      <div class="paste-item">
+        <img src="">
+        <h3>Paste Prosciuto Fungi</h3>
+        <p>Ingrediente:</p>
+      </div>
+    </div>
+    <!--Pentru Burgeri-->
+    <div id="burgeri">Burgeri</div>
+    <div class="Burgeri">
+      <div class="burgeri-item">
+        <img src="">
+        <h3>Meniu Burger Pui/Vita</h3>
+        <p>Ingrediente:</p>
+      </div>
+      <div class="burgeri-item">
+        <img src="">
+        <h3>Meniu Burger Pui/Vita Man</h3>
+        <p>Ingrediente:</p>
+      </div>
+      <div class="burgeri-item">
+        <img src="">
+        <h3>Meniu Burger American Pui/Vita</h3>
+        <p>Ingrediente:</p>
+      </div>
+      <div class="burgeri-item">
+        <img src="">
+        <h3>Meniu Burger Mexican Pui/Vita</h3>
+        <p>Ingrediente:</p>
+      </div>
+      <div class="burgeri-item">
+        <img src="">
+        <h3>Meniu Burger Dublu Man Pui/Vita</h3>
+        <p>Ingrediente:</p>
+      </div>
+      <div class="burgeri-item">
+        <img src="">
+        <h3>Meniu Burger </h3>
+        <p>Ingrediente</p>
+      </div>
+      <div class="burgeri-item">
+        <img src="">
+        <h3>Meniu Burger </h3>
+        <p>Ingrediente</p>
+      </div>
+      <div class="burgeri-item">
+        <img src="">
+        <h3>Meniu Burger </h3>
+        <p>Ingrediente</p>
+      </div>
+      <div class="burgeri-item">
+        <img src="">
+        <h3>Meniu Burger </h3>
+        <p>Ingrediente</p>
+      </div>
+    </div>
+
+
+    <!--Pentru Salate-->
+    <div id="salate">Salate</div>
+    <div class="Salate">
+      <div class="salate-item">
+        <img src="">
+        <h3>Salata Man</h3>
+        <p>Ingrediente:</p>
+      </div>
+      <div class="salate-item">
+        <img src="">
+        <h3>Salata Ton</h3>
+        <p>Ingrediente:</p>
+      </div>
+      <div class="salate-item">
+        <img src="">
+        <h3>Salata Quattro Formaggi</h3>
+        <p>Ingrediente:</p>
+      </div>
+      <div class="salate-item">
+        <img src="">
+        <h3>Salata</h3>
+        <p>Ingrediente:</p>
+      </div>
+    </div>
+
+    
+  
+
+    <!-- am sters spacer-ul deoarece am pus 
+      "navbar",
+      "Pizza", si 
+      <footer> 
+    in acelasi container ("banner").
+
+    Toate au default z-index 0, prin urmare acel "spacer" nu mai este necesar.
+    Daca vrei, poti sa faci acel "navbar" (header) sticky.
+    -->
+    <!-- <div class="spacer"></div> -->
 
     <footer>
       <div class="container">
