--- a/site2.html
+++ b/site2.html
@@ -10,11 +10,8 @@
 </head>
 
 <body>
-
-
-
-  <div class="banner">
-    <div class="navbar">
+   <div class="banner">
+    <div class="navbar" id="navbar">
       <ul>
         <li><a href="http://127.0.0.1:5500/site.html">Acasa</a></li>
         <li><a href="http://127.0.0.1:5500/site2.html#pizza" id="Pizza">Pizza</a></li>
@@ -23,8 +20,6 @@
         <li><a href="http://127.0.0.1:5500/site2.html#salate"id= "Salate">Salate</a></li>
         <li><a href="#" id="contact-link">Contact</a></li>
       </ul>
-
-      <img src="Logo.jpg" class="logo">
 
     </div>
     <!--Pentru Pizza-->
@@ -116,6 +111,7 @@
         <p>Ingrediente:</p>
       </div>
     </div>
+
 
     <!--Pentru Paste-->
     <div id="paste">Paste</div>
@@ -216,6 +212,8 @@
         <p>Ingrediente:</p>
       </div>
     </div>
+  
+    
 
     
   
@@ -236,10 +234,9 @@
         <div class="row">
           <div class="col-md-6">
             <p class="drepturi">Imaginile sunt cu titlu de prezentare. Toate drepturile rezervate. Produsele sunt
-              disponibile in limita stocului. Produsele ce nu sunt in stoc vor fi comunicate de catre operator. Timpul
-              de
-              livrare comunicat de catre acesta este estimativ. Timpul de livrare este influentat de conditiile
-              meteorologice, traficul rutier si de alte probleme tehnice si umane ce nu tin de Papa Man.</p>
+            disponibile in limita stocului. Produsele ce nu sunt in stoc vor fi comunicate de catre operator. Timpul
+            de livrare comunicat de catre acesta este estimativ. Timpul de livrare este influentat de conditiile
+            meteorologice, traficul rutier si de alte probleme tehnice si umane ce nu tin de Papa Man.</p>
           </div>
           <div class="col-md-6 email si facebook">
             <p>Email: alinfirica11@yahoo.com</p>
