--- a/site.html
+++ b/site.html
@@ -33,18 +33,32 @@
         <h6>Better Pizza Fresh Ingredients</h6>
       </ul>
     </div>
+  
+
+    <section id="mijloc">
+      <h8>Cu ce va servim?</h8>
+      <p>Livrave GRATUITA</p>
+      <button id="locatie">Locatie</button>
+      <button id="meniu"><a href="https://smallpdf.com/file#s=a65c75dd-7b49-4ad5-a239-50787fb68a20">Meniu PDF</a></button>
+      <galerie class="poze">
+        <img src="pizza.jpg" alt="Imagine1">
+        <img src="multe pizza.jpg" alt="Imagine2">
+        <img src="burgeri.jpg" alt="Imagine3">
+        <img src="wrap.jpg" alt="Imagine4">
+        <img src="cartofi.jpg" alt="Imagine5">
+      </galerie>
+    </section>
 
     
-  <!--
   <footer>
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <p class="drepturi">Imaginile sunt cu titlu de prezentare.Toate drepturile rezervate. Produsele sunt disponibile in limita stocului. Produsele ce nu sunt in stoc vor fi comunicate de catre operator. Timpul de livrare comunicat de catre acesta este estimativ. Timpul de livrare este influentat de conditiile meteorologice, traficul rutier si de alte probleme tehnice si umane ce nu tin de Papa Man.</p>
+          <p1 class="drepturi">Imaginile sunt cu titlu de prezentare.Toate drepturile rezervate. Produsele sunt disponibile in limita stocului. Produsele ce nu sunt in stoc vor fi comunicate de catre operator. Timpul de livrare comunicat de catre acesta este estimativ. Timpul de livrare este influentat de conditiile meteorologice, traficul rutier si de alte probleme tehnice si umane ce nu tin de Papa Man.</p1>
         </div>
         <div class="col-md-6 email si facebook">
-          <p>Email:alinfirica11@yahoo.com</p>
-          <p><a href="https://www.facebook.com/pizzamancornetu">Facebook</a></p>
+          <p10>Email:alinfirica11@yahoo.com</p10>
+          <p10><a href="https://www.facebook.com/pizzamancornetu">Facebook</a></p10>
         </div>
         <div class="col-md-6">
           <ul>
@@ -56,8 +70,5 @@
       </div>
     </div>
   </footer>
--->
-
-    
 </body>
 </html>
