--- a/site2.html
+++ b/site2.html
@@ -26,39 +26,39 @@
     <div id="pizza">Pizza</div>
     <div class="Pizza">
       <div class="pizza-item">
-        <img src="cursor.png">
+        <img src="mexicana.jpg">
         <h3>Mexicana</h3>
-        <p>Ingrediente: sos de roșii, mozzarella, pui, ardei iute, ceapă, porumb, fasole, jalapenos</p>
+        <p>Ingrediente: sos de roșii, mozzarella, vita,pepperoni, ceapă, porumb, jalapenos</p>
       </div>
       <div class="pizza-item">
-        <img src="italiana.jpg">
-        <h3>Italiana</h3>
-        <p>Ingrediente: sos de roșii, mozzarella, ciuperci, șuncă, măsline, ardei gras, parmezan</p>
+        <img src="man.jpg">
+        <h3>Man</h3>
+        <p>Ingrediente: sos de roșii, mozzarella, chorizo, șuncă, ciuperci, masline, parmezan</p>
       </div>
       <div class="pizza-item">
         <img src="quattro-formaggi.jpg">
         <h3>Quattro Formaggi</h3>
-        <p>Ingrediente: sos de roșii, mozzarella, gorgonzola, parmezan, ricotta</p>
+        <p>Ingrediente: sos alb, mozzarella, gorgonzola, parmezan</p>
       </div>
       <div class="pizza-item">
         <img src="capriciosa.jpg">
         <h3>Capriciosa</h3>
-        <p>Ingrediente: sos de roșii, mozzarella, șuncă, ciuperci, măsline</p>
+        <p>Ingrediente: sos de roșii, mozzarella, sunca, ciuperci, măsline</p>
       </div>
       <div class="pizza-item">
-        <img src="hawaii.jpg">
-        <h3>Hawaii</h3>
-        <p>Ingrediente: sos de roșii, mozzarella, șuncă, ananas</p>
+        <img src="carnivora.jpg">
+        <h3>Carnivora</h3>
+        <p>Ingrediente: sos de roșii, mozzarella, salam, sunca, bacon, carnati</p>
       </div>
       <div class="pizza-item">
         <img src="vegetariana.jpg">
         <h3>Vegetariana</h3>
-        <p>Ingrediente: sos de roșii, mozzarella, ardei gras, ciuperci, măsline, ceapă</p>
+        <p>Ingrediente: sos de roșii, mozzarella, ardei gras, ciuperci, porumb, ceapă</p>
       </div>
       <div class="pizza-item">
         <img src="pepperoni.jpg">
         <h3>Pepperoni</h3>
-        <p>Ingrediente: sos de roșii, mozzarella, salam pepperoni, ardei iute, oregano</p>
+        <p>Ingrediente: sos de roșii, mozzarella, pepperoni, oregano</p>
       </div>
       <div class="pizza-item">
         <img src="margherita.jpg">
@@ -106,7 +106,7 @@
         <p>Ingrediente: sos de roșii, mozzarella</p>
       </div>
       <div class="pizza-item">
-        <img src="">
+        <img src="ton.jpg">
         <h3>Pizza Ton</h3>
         <p>Ingrediente:</p>
       </div>
