--- a/site2.html
+++ b/site2.html
@@ -26,88 +26,93 @@
     <div id="pizza">Pizza</div>
     <div class="Pizza">
       <div class="pizza-item">
-        <img src="mexicana.jpg">
         <h3>Mexicana</h3>
+        <img src="pizza.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, vita,pepperoni, ceapă, porumb, jalapenos</p>
       </div>
       <div class="pizza-item">
-        <img src="man.jpg">
         <h3>Man</h3>
+        <img src="poze/Pizza man.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, chorizo, șuncă, ciuperci, masline, parmezan</p>
       </div>
       <div class="pizza-item">
-        <img src="quattro-formaggi.jpg">
         <h3>Quattro Formaggi</h3>
+        <img src="poze/Pizza QF.jpg">
         <p>Ingrediente: sos alb, mozzarella, gorgonzola, parmezan</p>
       </div>
       <div class="pizza-item">
-        <img src="capriciosa.jpg">
         <h3>Capriciosa</h3>
+        <img src="poze/Pizza Capriciosa.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, sunca, ciuperci, măsline</p>
       </div>
       <div class="pizza-item">
-        <img src="carnivora.jpg">
         <h3>Carnivora</h3>
+        <img src="poze/pizza carnivora">
         <p>Ingrediente: sos de roșii, mozzarella, salam, sunca, bacon, carnati</p>
       </div>
       <div class="pizza-item">
-        <img src="vegetariana.jpg">
         <h3>Vegetariana</h3>
+        <img src="vegetariana.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, ardei gras, ciuperci, porumb, ceapă</p>
       </div>
       <div class="pizza-item">
-        <img src="pepperoni.jpg">
         <h3>Pepperoni</h3>
+        <img src="poze/Pizza pepperoni.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, pepperoni, oregano</p>
       </div>
       <div class="pizza-item">
+        <h3>Rustica</h3>
+        <img src="poze/pizza rustica.jpg">
+        <p>Ingrediente: sos de roșii, mozzarella, salam sasesc, carnati, masline, ardei</p>
+      </div>
+      <div class="pizza-item">
+        <h3>Quattro Stagioni</h3>
         <img src="margherita.jpg">
-        <h3>Margherita</h3>
+        <p>Ingrediente: sos de roșii, mozzarella, salam, sunca, ciuperci, masline</p>
+      </div>
+      <div class="pizza-item">
+        <h3>Taraneasca</h3>
+        <img src="poze/Pizza taraneasca.jpg">
+        <p>Ingrediente: sos de roșii, mozzarella, bacon, carnati, ceapă, ardei gras, porumb</p>
+      </div>
+      <div class="pizza-item">
+        <h3>King</h3>
+        <img src="poze/Pizza king.jpg">
+        <p>Ingrediente: sos de roșii, mozzarella, gorgonzola, chorizo, bacon, masline, parmezan</p>
+      </div>
+      <div class="pizza-item">
+        <h3>Pui</h3>
+        <img src="poze/Pizza pui.jpg">
+        <p>Ingrediente: sos de roșii, mozzarella, ciuperci, pui, rosii</p>
+      </div>
+      <div class="pizza-item">
+        <h3>Pui Picant</h3>
+        <img src="">
         <p>Ingrediente: sos de roșii, mozzarella</p>
       </div>
       <div class="pizza-item">
+        <h3>Beef</h3>
         <img src="margherita.jpg">
-        <h3>Margherita</h3>
         <p>Ingrediente: sos de roșii, mozzarella</p>
       </div>
       <div class="pizza-item">
-        <img src="margherita.jpg">
-        <h3>Margherita</h3>
+        <h3>Diavola</h3>
+        <img src="poze/pizza diavola.jpg">
+        <p>Ingrediente: sos de roșii, mozzarella, peperoncino, pepperoni, ceapa, jalapenos</p>
+      </div>
+      <div class="pizza-item">
+        <h3>Carbonara</h3>
+        <img src="">
         <p>Ingrediente: sos de roșii, mozzarella</p>
       </div>
       <div class="pizza-item">
-        <img src="margherita.jpg">
-        <h3>Margherita</h3>
-        <p>Ingrediente: sos de roșii, mozzarella</p>
-      </div>
-      <div class="pizza-item">
-        <img src="margherita.jpg">
-        <h3>Margherita</h3>
-        <p>Ingrediente: sos de roșii, mozzarella</p>
-      </div>
-      <div class="pizza-item">
-        <img src="margherita.jpg">
-        <h3>Margherita</h3>
-        <p>Ingrediente: sos de roșii, mozzarella</p>
-      </div>
-      <div class="pizza-item">
-        <img src="margherita.jpg">
-        <h3>Margherita</h3>
-        <p>Ingrediente: sos de roșii, mozzarella</p>
-      </div>
-      <div class="pizza-item">
-        <img src="margherita.jpg">
-        <h3>Margherita</h3>
-        <p>Ingrediente: sos de roșii, mozzarella</p>
-      </div>
-      <div class="pizza-item">
-        <img src="margherita.jpg">
-        <h3>Margherita</h3>
-        <p>Ingrediente: sos de roșii, mozzarella</p>
-      </div>
-      <div class="pizza-item">
-        <img src="ton.jpg">
         <h3>Pizza Ton</h3>
+        <img src="poze/Pizza ton.jpg">
+        <p>Ingrediente: sos de roșii, mozzarella, ton, masline, porumb, ceapa</p>
+      </div>
+      <div class="pizza-item">
+        <h3>Pizza Caltzone</h3>
+        <img src="poze/Pizza caltzone.jpg">
         <p>Ingrediente:</p>
       </div>
     </div>
@@ -117,23 +122,23 @@
     <div id="paste">Paste</div>
     <div class="Paste">
       <div class="paste-item">
-        <img src=>
         <h3>Paste Man</h3>
+        <img src="poze/paste">
         <p>Ingrediente:</p>
       </div>
       <div class="paste-item">
-        <img src="">
         <h3>Paste Carbonara</h3>
+        <img src="poze/Paste Carbonara.jpg">
         <p>Ingrediente:</p>
       </div>
       <div class="paste-item">
-        <img src="">
         <h3>Paste Quattro Formaggi</h3>
+        <img src="">
         <p>Ingrediente:</p>
       </div>
       <div class="paste-item">
-        <img src="">
         <h3>Paste Prosciuto Fungi</h3>
+        <img src="">
         <p>Ingrediente:</p>
       </div>
     </div>
@@ -141,48 +146,48 @@
     <div id="burgeri">Burgeri</div>
     <div class="Burgeri">
       <div class="burgeri-item">
-        <img src="">
         <h3>Meniu Burger Pui/Vita</h3>
+        <img src="poze/Burger vita.jpg">
         <p>Ingrediente:</p>
       </div>
       <div class="burgeri-item">
-        <img src="">
         <h3>Meniu Burger Pui/Vita Man</h3>
+        <img src="">
         <p>Ingrediente:</p>
       </div>
       <div class="burgeri-item">
-        <img src="">
         <h3>Meniu Burger American Pui/Vita</h3>
+        <img src="">
         <p>Ingrediente:</p>
       </div>
       <div class="burgeri-item">
-        <img src="">
         <h3>Meniu Burger Mexican Pui/Vita</h3>
+        <img src="">
         <p>Ingrediente:</p>
       </div>
       <div class="burgeri-item">
-        <img src="">
         <h3>Meniu Burger Dublu Man Pui/Vita</h3>
+        <img src="">
         <p>Ingrediente:</p>
       </div>
       <div class="burgeri-item">
-        <img src="">
         <h3>Meniu Burger </h3>
+        <img src="">
         <p>Ingrediente</p>
       </div>
       <div class="burgeri-item">
-        <img src="">
         <h3>Meniu Burger </h3>
+        <img src="">
         <p>Ingrediente</p>
       </div>
       <div class="burgeri-item">
-        <img src="">
         <h3>Meniu Burger </h3>
+        <img src="">
         <p>Ingrediente</p>
       </div>
       <div class="burgeri-item">
-        <img src="">
         <h3>Meniu Burger </h3>
+        <img src="">
         <p>Ingrediente</p>
       </div>
     </div>
@@ -192,49 +197,33 @@
     <div id="salate">Salate</div>
     <div class="Salate">
       <div class="salate-item">
-        <img src="">
         <h3>Salata Man</h3>
+        <img src="poze/Salata Man.jpg">
         <p>Ingrediente:</p>
       </div>
       <div class="salate-item">
-        <img src="">
         <h3>Salata Ton</h3>
+        <img src="">
         <p>Ingrediente:</p>
       </div>
       <div class="salate-item">
-        <img src="">
         <h3>Salata Quattro Formaggi</h3>
+        <img src="">
         <p>Ingrediente:</p>
       </div>
       <div class="salate-item">
-        <img src="">
         <h3>Salata</h3>
+        <img src="">
         <p>Ingrediente:</p>
       </div>
     </div>
-  
-    
-
-    
-  
-
-    <!-- am sters spacer-ul deoarece am pus 
-      "navbar",
-      "Pizza", si 
-      <footer> 
-    in acelasi container ("banner").
-
-    Toate au default z-index 0, prin urmare acel "spacer" nu mai este necesar.
-    Daca vrei, poti sa faci acel "navbar" (header) sticky.
-    -->
-    <!-- <div class="spacer"></div> -->
 
     <footer>
       <div class="container">
         <div class="row">
           <div class="col-md-6">
             <p class="drepturi">Imaginile sunt cu titlu de prezentare. Toate drepturile rezervate. Produsele sunt
-            disponibile in limita stocului. Produsele ce nu sunt in stoc vor fi comunicate de catre operator. Timpul
+            disponibile in limita stocului. Produsele care nu sunt in stoc vor fi comunicate de catre operator. Timpul
             de livrare comunicat de catre acesta este estimativ. Timpul de livrare este influentat de conditiile
             meteorologice, traficul rutier si de alte probleme tehnice si umane ce nu tin de Papa Man.</p>
           </div>
