--- a/site.html
+++ b/site.html
@@ -1,10 +1,11 @@
 <html>
 <head>
-    <title>Papa Man</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script defer src="script.js"></script>
-    <script src="slideshow.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <link rel="icon" href="poze/Logo mic.png" type="image/x-icon">
+  <title>Papa Man</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <script defer src="script.js"></script>
+  <script src="slideshow.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <div class="banner">
@@ -15,17 +16,19 @@
               <li><a href="http://127.0.0.1:5500/site2.html#paste"id ="Paste">Paste</a></li>
               <li><a href="http://127.0.0.1:5500/site2.html#burgeri"id ="Burgeri">Burgeri</a></li>
               <li><a href="http://127.0.0.1:5500/site2.html#salate"id= "Salate">Salate</a></li>
-                <li><a href="#" id="contact-link">Contact</a></li>
-                <div class="overlay" id="overlay"></div>
-                <div class="popup" id="popup">
-                  <!-- conținut pop up -->
-                  <h2>Numere de contact:</h2>
-                  <p>Bragadiru:07777777
-                     Cornetu:0788888
-                  </p>
-                </div>
+              <li><a href="http://127.0.0.1:5500/site2.html#deserturi" id="Deserturi">Deserturi</a></li>
+              <li><a href="http://127.0.0.1:5500/site2.html#bauturi" id="Bauturi">Bauturi</a></li>
+              <li><a href="#" id="contact-link">Contact</a></li>  
             </ul>
         </div>
+    </div>
+    <div id="overlaypizza50"></div>
+    <div id="pizza50popup">
+      <div class="scrispopup">
+        <p20>Nou!</p20>
+        <p21>Pizza50cm</p21>
+      </div>
+      <img src="poze/pizza50popup.jpg">
     </div>
     <div id="welcome">
       <ul>
@@ -33,12 +36,23 @@
         <h6>Better Pizza Fresh Ingredients</h6>
       </ul>
     </div>
-  
+
+    <div class="overlay" id="overlay"></div>
+    <div class="popup" id="popup">
+      <img src="poze/program.jpg">
+      <div class="popupdreapta" id="popupdreapta">
+        <h2>Contactează-ne</h2>
+        <numar1>07777777</numar1>
+        <zone1>Pentru zonele:<br>Bragadiru, Clinceni, Domnești, Măgurele</zone1>
+        <numar2>07888888</numar2> 
+        <zone2>Pentru zonele:<br>Cornetu, Buda, Mihăilești, Popești</zone2>
+      </div>
+    </div>
 
     <section id="mijloc">
       <h8>Cu ce va servim?</h8>
-      <p>Livrave GRATUITA</p>
-      <button id="locatie">Locatie</button>
+      <p>Livrare GRATUITA <img src="poze/masina.png"></p>
+      <button id="locatie" onclick="harta()">Locatie</button>
       <button id="meniu"><a href="https://smallpdf.com/file#s=a65c75dd-7b49-4ad5-a239-50787fb68a20">Meniu PDF</a></button>
       <galerie class="poze">
         <img src="poze/pizza.jpg" alt="Imagine1">
@@ -54,8 +68,8 @@
               <p1 class="drepturi">Imaginile sunt cu titlu de prezentare.Toate drepturile rezervate. Produsele sunt disponibile in limita stocului. Produsele care nu sunt in stoc vor fi comunicate de catre operator. Timpul de livrare comunicat de catre acesta este estimativ. Timpul de livrare este influentat de conditiile meteorologice, traficul rutier si de alte probleme tehnice si umane ce nu tin de Papa Man.</p1>
             </div>
             <div class="col-md-6 email si facebook">
-              <p10>Email:alinfirica11@yahoo.com</p10>
-              <p10><a href="https://www.facebook.com/pizzamancornetu">Facebook</a></p10>
+              <p10><a href="https://www.facebook.com/pizzamancornetu"><img src="poze/iconita facebook.jpg" alt="Facebook"></a></p10>
+
             </div>
             <div class="col-md-6">
               <ul>
