--- a/site2.html
+++ b/site2.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="icon" href="poze/Logo mic.png" type="image/x-icon">
   <title>Papa Man</title>
   <link rel="stylesheet" type="text/css" href="style2.css">
   <script defer src="script.js"></script>
@@ -18,104 +19,242 @@
         <li><a href="http://127.0.0.1:5500/site2.html#paste"id ="Paste">Paste</a></li>
         <li><a href="http://127.0.0.1:5500/site2.html#burgeri"id ="Burgeri">Burgeri</a></li>
         <li><a href="http://127.0.0.1:5500/site2.html#salate"id= "Salate">Salate</a></li>
+        <li><a href="http://127.0.0.1:5500/site2.html#deserturi" id="Deserturi">Deserturi</a></li>
+        <li><a href="http://127.0.0.1:5500/site2.html#bauturi" id="Bauturi">Bauturi</a></li>
         <li><a href="#" id="contact-link">Contact</a></li>
       </ul>
 
     </div>
     <!--Pentru Pizza-->
     <div id="pizza">Pizza</div>
+    <div class="buton-container">
+      <button onclick="Pizza32cm()" class="buton50">32cm</button>
+      <button onclick="Pizza50cm()" class="buton50">50cm</button>
+    </div>
     <div class="Pizza">
       <div class="pizza-item">
-        <h3>Mexicana</h3>
-        <img src="pizza.jpg">
+        <h3>Mexicana 32cm</h3>
+        <img src="poze/Logo.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, vita,pepperoni, ceapă, porumb, jalapenos</p>
+        <pr>Pret:</pr>
       </div>
       <div class="pizza-item">
-        <h3>Man</h3>
+        <h3>Man 32cm</h3>
         <img src="poze/Pizza man.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, chorizo, șuncă, ciuperci, masline, parmezan</p>
+        <pr>Pret:</pr>
       </div>
       <div class="pizza-item">
-        <h3>Quattro Formaggi</h3>
+        <h3>Quattro Formaggi 32cm</h3>
         <img src="poze/Pizza QF.jpg">
         <p>Ingrediente: sos alb, mozzarella, gorgonzola, parmezan</p>
+        <pr>Pret:</pr>
       </div>
       <div class="pizza-item">
-        <h3>Capriciosa</h3>
+        <h3>Capriciosa 32cm</h3>
         <img src="poze/Pizza Capriciosa.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, sunca, ciuperci, măsline</p>
+        <pr>Pret:</pr>
       </div>
       <div class="pizza-item">
-        <h3>Carnivora</h3>
-        <img src="poze/pizza carnivora">
+        <h3>Carnivora 32cm</h3>
+        <img src="poze/Logo.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, salam, sunca, bacon, carnati</p>
+        <pr>Pret:</pr>
       </div>
       <div class="pizza-item">
-        <h3>Vegetariana</h3>
-        <img src="vegetariana.jpg">
+        <h3>Vegetariana 32cm</h3>
+        <img src="poze/Logo.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, ardei gras, ciuperci, porumb, ceapă</p>
+        <pr>Pret:</pr>
       </div>
       <div class="pizza-item">
-        <h3>Pepperoni</h3>
+        <h3>Pepperoni 32cm</h3>
         <img src="poze/Pizza pepperoni.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, pepperoni, oregano</p>
+        <pr>Pret:</pr>
       </div>
       <div class="pizza-item">
-        <h3>Rustica</h3>
+        <h3>Rustica 32cm</h3>
         <img src="poze/pizza rustica.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, salam sasesc, carnati, masline, ardei</p>
+        <pr>Pret:</pr>
       </div>
       <div class="pizza-item">
-        <h3>Quattro Stagioni</h3>
-        <img src="margherita.jpg">
+        <h3>Quattro Stagioni 32cm</h3>
+        <img src="poze/Logo.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, salam, sunca, ciuperci, masline</p>
+        <pr>Pret:</pr>
       </div>
       <div class="pizza-item">
-        <h3>Taraneasca</h3>
+        <h3>Taraneasca 32cm</h3>
         <img src="poze/Pizza taraneasca.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, bacon, carnati, ceapă, ardei gras, porumb</p>
+        <pr>Pret:</pr>
       </div>
       <div class="pizza-item">
-        <h3>King</h3>
+        <h3>King 32cm</h3>
         <img src="poze/Pizza king.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, gorgonzola, chorizo, bacon, masline, parmezan</p>
+        <pr>Pret:</pr>
       </div>
       <div class="pizza-item">
-        <h3>Pui</h3>
+        <h3>Pui 32cm</h3>
         <img src="poze/Pizza pui.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, ciuperci, pui, rosii</p>
+        <pr>Pret:</pr>
       </div>
       <div class="pizza-item">
-        <h3>Pui Picant</h3>
-        <img src="">
+        <h3>Pui Picant 32cm</h3>
+        <img src="poze/Logo.jpg">
         <p>Ingrediente: sos de roșii, mozzarella</p>
+        <pr>Pret:</pr>
       </div>
       <div class="pizza-item">
-        <h3>Beef</h3>
-        <img src="margherita.jpg">
+        <h3>Beef 32cm</h3>
+        <img src="poze/Logo.jpg">
         <p>Ingrediente: sos de roșii, mozzarella</p>
+        <pr>Pret:</pr>
       </div>
       <div class="pizza-item">
-        <h3>Diavola</h3>
+        <h3>Diavola 32cm</h3>
         <img src="poze/pizza diavola.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, peperoncino, pepperoni, ceapa, jalapenos</p>
+        <pr>Pret:</pr>
       </div>
       <div class="pizza-item">
-        <h3>Carbonara</h3>
-        <img src="">
+        <h3>Carbonara 32cm</h3>
+        <img src="poze/Logo.jpg">
         <p>Ingrediente: sos de roșii, mozzarella</p>
+        <pr>Pret:</pr>
       </div>
       <div class="pizza-item">
-        <h3>Pizza Ton</h3>
+        <h3>Pizza Ton 32cm</h3>
         <img src="poze/Pizza ton.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, ton, masline, porumb, ceapa</p>
+        <pr>Pret:</pr>
       </div>
       <div class="pizza-item">
         <h3>Pizza Caltzone</h3>
         <img src="poze/Pizza caltzone.jpg">
         <p>Ingrediente:</p>
+        <pr>Pret:</pr>
       </div>
     </div>
+
+    <!--Pentru Pizza Mare-->
+    <div id="pizza50"></div>
+    <div class="pizza50 hidden">
+      <div class="pizza50-item">
+        <h3>Mexicana 50cm</h3>
+        <img src="poze/Logo.jpg">
+        <p>Ingrediente: sos de roșii, mozzarella, vita,pepperoni, ceapă, porumb, jalapenos</p>
+        <pr>Pret:</pr>
+      </div>
+      <div class="pizza50-item">
+        <h3>Man</h3>
+        <img src="poze/Pizza man.jpg">
+        <p>Ingrediente: sos de roșii, mozzarella, chorizo, șuncă, ciuperci, masline, parmezan</p>
+        <pr>Pret:</pr>
+      </div>
+      <div class="pizza50-item">
+        <h3>Quattro Formaggi 50cm</h3>
+        <img src="poze/Pizza QF.jpg">
+        <p>Ingrediente: sos alb, mozzarella, gorgonzola, parmezan</p>
+        <pr>Pret:</pr>
+      </div>
+      <div class="pizza50-item">
+        <h3>Capriciosa</h3>
+        <img src="poze/Pizza Capriciosa.jpg">
+        <p>Ingrediente: sos de roșii, mozzarella, sunca, ciuperci, măsline</p>
+        <pr>Pret:</pr>
+      </div>
+      <div class="pizza50-item">
+        <h3>Carnivora</h3>
+        <img src="poze/Logo.jpg">
+        <p>Ingrediente: sos de roșii, mozzarella, salam, sunca, bacon, carnati</p>
+        <pr>Pret:</pr>
+      </div>
+      <div class="pizza50-item">
+        <h3>Vegetariana</h3>
+        <img src="poze/Logo.jpg">
+        <p>Ingrediente: sos de roșii, mozzarella, ardei gras, ciuperci, porumb, ceapă</p>
+        <pr>Pret:</pr>
+      </div>
+      <div class="pizza50-item">
+        <h3>Pepperoni</h3>
+        <img src="poze/Pizza pepperoni.jpg">
+        <p>Ingrediente: sos de roșii, mozzarella, pepperoni, oregano</p>
+        <pr>Pret:</pr>
+      </div>
+      <div class="pizza50-item">
+        <h3>Rustica</h3>
+        <img src="poze/pizza rustica.jpg">
+        <p>Ingrediente: sos de roșii, mozzarella, salam sasesc, carnati, masline, ardei</p>
+        <pr>Pret:</pr>
+      </div>
+      <div class="pizza50-item">
+        <h3>Quattro Stagioni</h3>
+        <img src="poze/Logo.jpg">
+        <p>Ingrediente: sos de roșii, mozzarella, salam, sunca, ciuperci, masline</p>
+        <pr>Pret:</pr>
+      </div>
+      <div class="pizza50-item">
+        <h3>Taraneasca</h3>
+        <img src="poze/Pizza taraneasca.jpg">
+        <p>Ingrediente: sos de roșii, mozzarella, bacon, carnati, ceapă, ardei gras, porumb</p>
+        <pr>Pret:</pr>
+      </div>
+      <div class="pizza50-item">
+        <h3>King</h3>
+        <img src="poze/Pizza king.jpg">
+        <p>Ingrediente: sos de roșii, mozzarella, gorgonzola, chorizo, bacon, masline, parmezan</p>
+        <pr>Pret:</pr>
+      </div>
+      <div class="pizza50-item">
+        <h3>Pui</h3>
+        <img src="poze/Pizza pui.jpg">
+        <p>Ingrediente: sos de roșii, mozzarella, ciuperci, pui, rosii</p>
+        <pr>Pret:</pr>
+      </div>
+      <div class="pizza50-item">
+        <h3>Pui Picant</h3>
+        <img src="poze/Logo.jpg">
+        <p>Ingrediente: sos de roșii, mozzarella</p>
+        <pr>Pret:</pr>
+      </div>
+      <div class="pizza50-item">
+        <h3>Beef</h3>
+        <img src="poze/Logo.jpg">
+        <p>Ingrediente: sos de roșii, mozzarella</p>
+        <pr>Pret:</pr>
+      </div>
+      <div class="pizza50-item">
+        <h3>Diavola</h3>
+        <img src="poze/pizza diavola.jpg">
+        <p>Ingrediente: sos de roșii, mozzarella, peperoncino, pepperoni, ceapa, jalapenos</p>
+        <pr>Pret:</pr>
+      </div>
+      <div class="pizza50-item">
+        <h3>Carbonara</h3>
+        <img src="poze/Logo.jpg">
+        <p>Ingrediente: sos de roșii, mozzarella</p>
+        <pr>Pret:</pr>
+      </div>
+      <div class="pizza50-item">
+        <h3>Pizza Ton</h3>
+        <img src="poze/Pizza ton.jpg">
+        <p>Ingrediente: sos de roșii, mozzarella, ton, masline, porumb, ceapa</p>
+        <pr>Pret:</pr>
+      </div>
+      <div class="pizza50-item">
+        <h3>Pizza Caltzone</h3>
+        <img src="poze/Pizza caltzone.jpg">
+        <p>Ingrediente:</p>
+        <pr>Pret:</pr>
+      </div>
+    </div>
+    
 
 
     <!--Pentru Paste-->
@@ -123,7 +262,7 @@
     <div class="Paste">
       <div class="paste-item">
         <h3>Paste Man</h3>
-        <img src="poze/paste">
+        <img src="poze/Logo.jpg">
         <p>Ingrediente:</p>
       </div>
       <div class="paste-item">
@@ -133,12 +272,12 @@
       </div>
       <div class="paste-item">
         <h3>Paste Quattro Formaggi</h3>
-        <img src="">
+        <img src="poze/Logo.jpg">
         <p>Ingrediente:</p>
       </div>
       <div class="paste-item">
         <h3>Paste Prosciuto Fungi</h3>
-        <img src="">
+        <img src="poze/Logo.jpg">
         <p>Ingrediente:</p>
       </div>
     </div>
@@ -152,22 +291,22 @@
       </div>
       <div class="burgeri-item">
         <h3>Meniu Burger Pui/Vita Man</h3>
-        <img src="">
+        <img src="poze/Logo.jpg">
         <p>Ingrediente:</p>
       </div>
       <div class="burgeri-item">
         <h3>Meniu Burger American Pui/Vita</h3>
-        <img src="">
+        <img src="poze/Logo.jpg">
         <p>Ingrediente:</p>
       </div>
       <div class="burgeri-item">
         <h3>Meniu Burger Mexican Pui/Vita</h3>
-        <img src="">
+        <img src="poze/Logo.jpg">
         <p>Ingrediente:</p>
       </div>
       <div class="burgeri-item">
         <h3>Meniu Burger Dublu Man Pui/Vita</h3>
-        <img src="">
+        <img src="poze/Logo.jpg">
         <p>Ingrediente:</p>
       </div>
       <div class="burgeri-item">
@@ -203,20 +342,68 @@
       </div>
       <div class="salate-item">
         <h3>Salata Ton</h3>
-        <img src="">
+        <img src="poze/Logo.jpg">
         <p>Ingrediente:</p>
       </div>
       <div class="salate-item">
         <h3>Salata Quattro Formaggi</h3>
-        <img src="">
+        <img src="poze/Logo.jpg">
         <p>Ingrediente:</p>
       </div>
       <div class="salate-item">
         <h3>Salata</h3>
-        <img src="">
+        <img src="poze/Logo.jpg">
         <p>Ingrediente:</p>
       </div>
     </div>
+
+    <!--Pentru Deserturi-->
+    <div id="deserturi">Deserturi</div>
+    <div class="Deserturi">
+      <div class="deserturi-item">
+        <h3>Cioco Pizza Caltzone</h3>
+        <img src="poze/Logo.jpg">
+        <p>Ingrediente</p>
+      </div>
+      <div class="deserturi-item">
+        <h3>Lava Cake</h3>
+        <img src="poze/Logo.jpg">
+        <p>Ingrediente: </p>
+      </div>
+      <div class="deserturi-item">
+        <h3>Papanasi</h3>
+        <img src="poze/Logo.jpg">
+        <p>Ingrediente:</p>
+      </div>
+      <div class="deserturi-item">
+        <h3>Cioco Pizza XXL</h3>
+        <img src="poze/Logo.jpg">
+      </div>
+      <div class="deserturi-item">
+        <h3>Brownie</h3>
+        <img src="poze/Logo.jpg">
+      </div>
+      <div class="deserturi-item">
+        <h3>Pernute Ciocolata</h3>
+        <img src="poze/Logo.jpg">
+      </div>
+    </div>
+    <!--Pentru Bauturi-->
+    <div id="bauturi">Bauturi</div>
+    <div class="Bauturi">
+      <div class="bauturi-item">
+       <h3>Pepsi</h3>
+       <img src="">
+     </div>
+     <div class="bauturi-item">
+      <h3>Mirinda</h3>
+      <img src="">
+     </div>
+     <div class="bauturi-item">
+      <h3>7Up</h3>
+      <img src="">
+     </div>
+   </div>
 
     <footer>
       <div class="container">
@@ -241,14 +428,19 @@
         </div>
       </div>
     </footer>
-  </div>
 
 
 
   <div class="overlay" id="overlay"></div>
   <div class="popup" id="popup">
-    <h2>Numere de contact:</h2>
-    <p>Bragadiru: 07777777<br>Cornetu: 0788888</p>
+    <img src="poze/program.jpg">
+    <div class="popupdreapta" id="popupdreapta">
+      <h2>Contactează-ne</h2>
+      <numar1>07777777</numar1>
+      <zone1>Pentru zonele:<br>Bragadiru, Clinceni, Domnești, Măgurele</zone1>
+      <numar2>07888888</numar2> 
+      <zone2>Pentru zonele:<br>Cornetu, Buda, Mihăilești, Popești</zone2>
+    </div>
   </div>
 
 </body>
